06-redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-auth
  namespace: auth
  labels:
    app: redis
    component: session-store
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis
